# VideoCall-System

./: .gitignore  BROWSER_CONFLICT_ANALYSIS.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  GITHUB_UPLOAD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MULTI_USER_CALL_GUIDE.md  PROJECT_STATUS_ANALYSIS.md  README.md  README_DOCS.md  REALTIME_CALL_DETECTION_GUIDE.md  REAL_CALL_FEATURES.md  SCRIPTS_SUMMARY.md  WEBRTC_CONNECTION_FIX_GUIDE.md  WebSocket问题解决报告.md  check_system_status.py  clean_sessions.py  debug_login.py  demo_real_call.py  docker-compose.dev.yml  docker-compose.yml  quick-start.bat  quick_diagnosis.bat  quick_manage.bat  quick_start.bat  quick_test.bat  quick_test_api.py  run-demo.bat  run-demo.sh  run_project.bat  start-local.sh  start-video-conference.bat  start_backend_simple.bat  start_frontend.bat  start_frontend_simple.bat  start_real_call_system.bat  start_system_simple.bat  start_username_call_system.bat  tes.cpp  (+19 more)
Edge-Model-Infra/node/ai-detection/: CMakeLists.txt  Dockerfile  README.md  build.sh  test_detection.py
core/ffmpeg-service/: BUILD_SUCCESS_REPORT.md  CMakeLists.txt  CMakeLists_simple.txt  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md  build.bat  build.sh  build_simple.bat  build_simple_example.bat  config.json  integrate_with_project.py  quick_start.bat  quick_start.sh  setup_environment.bat  setup_environment.sh  start_service.bat  start_service.sh  test_basic_functionality.py  test_detection.cpp
core/ffmpeg-service/build_simple/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ffmpeg_simple_example.sln  ffmpeg_simple_example.vcxproj  ffmpeg_simple_example.vcxproj.filters
core/ffmpeg-service/examples/: main.cpp  simple_example.cpp
core/ffmpeg-service/include/: audio_processor.h  detection_engine.h  ffmpeg_processor.h  integration_service.h  onnx_detector.h  onnx_inference.h  project_integration.h  utils.h  video_compressor.h
core/ffmpeg-service/src/: detection_engine.cpp  ffmpeg_processor.cpp  integration_service.cpp  main.cpp  onnx_detector.cpp  utils.cpp
meeting-system/Edge-LLM-Infra-master/infra-controller/: CMakeLists.txt
meeting-system/ai-node/: CMakeLists.txt
meeting-system/ai-node/config/: ai_node_config.json
meeting-system/ai-node/include/: MeetingAINode.h
meeting-system/ai-node/src/: MeetingAINode.cpp  main.cpp
qt6-client/: .gitignore  CMakeLists.txt  README.md  build-with-qt.ps1  build.ps1  build.sh  check-installation-status.ps1  configure.ps1  install-opencv-simple.ps1  manual-configure.ps1  setup-and-build.ps1  test_build.sh  vcpkg-toolchain.cmake  windeployqt.ps1
qt6-client/cmake/: FindWebRTC.cmake
qt6-client/config/: config.json
qt6-client/doc/: API_COMPLETE.md  API_DOCUMENTATION.md  API_DOCUMENTATION_PART2.md  API_DOCUMENTATION_SUMMARY.md  API_REFERENCE.md  CLIENT_API_USAGE_GUIDE.md  CLIENT_SERVER_COMMUNICATION_DESIGN.md  CLIENT_TEST_REPORT.md  COMPLETE_GATEWAY_TEST_REPORT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md
qt6-client/docs/: AI_REMOTE_STREAM_ANALYSIS.md  STICKER_FEATURE.md
qt6-client/include/: application.h
qt6-client/include/models/: meeting.h  message.h  participant.h  user.h
qt6-client/include/network/: api_client.h  http_client.h  websocket_client.h
qt6-client/include/services/: ai_service.h  auth_service.h  media_service.h  meeting_service.h
qt6-client/include/ui/: ai_panel_controller.h  login_controller.h  main_window_controller.h  meeting_room_controller.h  video_effects_controller.h
qt6-client/include/utils/: config.h  json_helper.h  logger.h
qt6-client/include/video_effects/: gl_video_renderer.h  sticker_overlay.h  video_effect_processor.h
qt6-client/include/webrtc/: media_stream.h  peer_connection.h  remote_stream_analyzer.h  webrtc_manager.h  webrtc_peer_connection.h
qt6-client/qml/: AIPanel.qml  ForgotPasswordDialog.qml  LoginPage.qml  MainWindow.qml  MeetingRoom.qml  RegisterDialog.qml  VideoEffectsPanel.qml  main.qml
qt6-client/qml/components/: ChatPanel.qml  MeetingToolBar.qml  ParticipantList.qml  StickerPanel.qml  VideoTile.qml
qt6-client/resources/: resources.qrc
qt6-client/resources/models/: README.md
qt6-client/src/: application.cpp  main.cpp
qt6-client/src/models/: meeting.cpp  message.cpp  participant.cpp  user.cpp
qt6-client/src/network/: api_client.cpp  http_client.cpp  websocket_client.cpp
qt6-client/src/services/: ai_service.cpp  auth_service.cpp  media_service.cpp  meeting_service.cpp
qt6-client/src/ui/: ai_panel_controller.cpp  login_controller.cpp  main_window_controller.cpp  meeting_room_controller.cpp  video_effects_controller.cpp
qt6-client/src/utils/: config.cpp  json_helper.cpp  logger.cpp
qt6-client/src/video_effects/: gl_video_renderer.cpp  sticker_overlay.cpp  video_effect_processor.cpp
qt6-client/src/webrtc/: media_stream.cpp  peer_connection.cpp  remote_stream_analyzer.cpp  webrtc_manager.cpp  webrtc_peer_connection.cpp
qt6-client/tests/: test_api_client.cpp  test_api_integration.cpp
src/frontend/: CMakeLists.txt  enhanced-meeting.html  multi-user-test.html
src/frontend/css/: smart-editing.css
src/frontend/js/: app.js  detection-multi.js  detection.js  enhanced-app.js  smart-editing.js  webrtc-multi.js  webrtc.js
src/frontend/qml/: SmartEditingView.qml  main.qml
src/frontend/qt-client/: CMakeLists.txt
src/frontend/qt-client-new/: CMakeLists.txt  CMakeLists_effects_demo.txt  README.md  build.sh
src/frontend/src/: application.cpp  main.cpp
src/frontend/web_interface/: debug.html  index.html  quick_start.bat  start_frontend.bat  start_frontend.sh  test-improvements.html  test-remote-video.html  test-simple.html
src/video-processing/: CMakeLists.txt  Dockerfile  README.md  TEST_GUIDE.md  build.sh  compile_simple.bat  compile_simple.sh  docker-compose.yml  simple_test.cpp
src/video-processing/assets/: test_stickers.txt
src/video-processing/include/: camera_capture.h  common.h  effect_processor.h  face_detector.h  filter_manager.h  opengl_renderer.h  (+3 more)
(+765 files in other folders)
